--- a/04-nest-front/package.json
+++ b/04-nest-front/package.json
@@ -4,15 +4,20 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --open",
     "build": "vue-tsc -b && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.4.37"
+    "axios": "^1.7.4",
+    "element-plus": "^2.8.0",
+    "vue": "^3.4.37",
+    "vue-router": "^4.4.3"
   },
   "devDependencies": {
+    "@types/node": "^22.5.0",
     "@vitejs/plugin-vue": "^5.1.2",
+    "sass": "^1.77.8",
     "typescript": "^5.5.3",
     "vite": "^5.4.1",
     "vue-tsc": "^2.0.29"
