--- a/05-nest-rxjs/package.json
+++ b/05-nest-rxjs/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "04-nest-end",
+  "name": "05-nest-rxjs",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -22,7 +22,6 @@
   "dependencies": {
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
-    "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
@@ -31,27 +30,19 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
-    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.17",
-    "@types/express-session": "^1.18.0",
     "@types/jest": "^29.5.2",
-    "@types/multer": "^1.4.12",
     "@types/node": "^20.3.1",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
-    "compressing": "^1.10.1",
-    "cors": "^2.8.5",
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
-    "express-session": "^1.18.0",
     "jest": "^29.5.0",
-    "multer": "^1.4.5-lts.1",
     "prettier": "^3.0.0",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
-    "svg-captcha": "^1.4.0",
     "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
