--- a/07-nest-guard/package.json
+++ b/07-nest-guard/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "06-nest-interceptor",
+  "name": "07-nest-guard",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -22,14 +22,9 @@
   "dependencies": {
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
-    "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
-    "@types/uuid": "^10.0.0",
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.1",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1",
-    "uuid": "^10.0.0"
+    "rxjs": "^7.8.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -41,8 +36,6 @@
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
-    "axios": "^1.7.5",
-    "cheerio": "^1.0.0",
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
