:memo: @使用方法装饰器封装一个@Get()请求

--- a/09-nest-crud/tsconfig.json
+++ b/09-nest-crud/tsconfig.json
@@ -4,6 +4,7 @@
     "declaration": true,
     "removeComments": true,
     "emitDecoratorMetadata": true,
+    /*使用装饰器，需要开启该选项，值设为true*/
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
     "target": "ES2021",
